--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "express-winston": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
