--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "validator": "^13.11.0",
+    "winston": "^3.8.2",
     "express-winston": "^4.2.0"
+
   },
   "devDependencies": {
     "eslint": "^8.44.0",
